Flask and basic help command

--- a/rater/Dockerfile
+++ b/rater/Dockerfile
@@ -2,10 +2,8 @@ FROM python:3.8-slim-buster
 
 WORKDIR /app
 
-ENV FLASK_APP=bot.py
 
-
-RUN apt-get update -y && apt-get install -y htop libgl1-mesa-glx libglib2.0-0 libsm6 libxext6 libxrender-dev python3-pip python-dev
+RUN apt-get update -y && apt-get install -y curl htop libgl1-mesa-glx libglib2.0-0 libsm6 libxext6 libxrender-dev python3-pip python-dev
 
 COPY requirements.txt requirements.txt
 RUN pip3 install -r requirements.txt
@@ -24,7 +22,13 @@ RUN groupmod -g $GID lisa
 USER lisa
 
 
-COPY .. /app
+ENV FLASK_APP=proxy.py
+ENV FLASK_RUN_HOST=0.0.0.0
+ENV FLASK_RUN_PORT=80
 
 
-CMD [ "python3", "bot.py"]
+COPY . /app
+
+EXPOSE 80
+
+CMD [ "python3", "-m", "flask", "run"]
