--- a/bot/package.json
+++ b/bot/package.json
@@ -16,6 +16,7 @@
   "homepage": "https://github.com/SemperPeritus/lisa-discord-bot#readme",
   "dependencies": {
     "@discordjs/rest": "^0.1.0-canary.0",
+    "axios": "^0.21.1",
     "discord.js": "^13.0.1",
     "dotenv": "^10.0.0"
   },
