--- a/bot/package.json
+++ b/bot/package.json
@@ -1,10 +1,10 @@
 {
   "name": "lisa-discord-bot",
   "version": "0.0.1",
-  "main": "src/index.js",
+  "main": "src/index.ts",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node src/index.js"
+    "start": "ts-node src/index.ts"
   },
   "repository": {
     "type": "git",
@@ -18,7 +18,9 @@
     "@discordjs/rest": "^0.1.0-canary.0",
     "axios": "^0.21.1",
     "discord.js": "^13.0.1",
-    "dotenv": "^10.0.0"
+    "dotenv": "^10.0.0",
+    "ts-node": "^10.2.0",
+    "typescript": "^4.3.5"
   },
   "devDependencies": {
     "prettier": "^2.3.2",
