--- a/bot/package.json
+++ b/bot/package.json
@@ -27,6 +27,7 @@
   },
   "devDependencies": {
     "@types/node": "^16.6.0",
+    "@types/sequelize": "^4.28.10",
     "@types/validator": "^13.6.3",
     "prettier": "^2.3.2",
     "pretty-quick": "^3.1.1"
