--- a/bot/package.json
+++ b/bot/package.json
@@ -21,12 +21,14 @@
     "dotenv": "^10.0.0",
     "pg": "^8.7.1",
     "pg-hstore": "^2.3.4",
+    "reflect-metadata": "^0.1.13",
     "sequelize": "^6.6.5",
+    "sequelize-typescript": "^2.1.0",
     "ts-node": "^10.2.0",
     "typescript": "^4.3.5"
   },
   "devDependencies": {
-    "@types/node": "^16.6.0",
+    "@types/node": "^16.6.1",
     "@types/sequelize": "^4.28.10",
     "@types/validator": "^13.6.3",
     "prettier": "^2.3.2",
