--- a/bot/tsconfig.json
+++ b/bot/tsconfig.json
@@ -6,6 +6,7 @@
     "emitDecoratorMetadata": true,
     "experimentalDecorators": true,
     "moduleResolution": "node",
+    "esModuleInterop": true,
     "lib": ["es2020"],
     "target": "es6",
     "sourceMap": true,
