pg_stat_statements

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -26,6 +26,8 @@ services:
       - '9302:5432'
     volumes:
       - '/opt/lisa-discord/${STAGING}/postgres/:/var/lib/postgresql/data/'
+      - './db/postgresql.conf:/usr/local/share/postgresql/postgresql.conf'
+    command: 'postgres -c config_file=/usr/local/share/postgresql/postgresql.conf'
 
   postgres-exporter:
     container_name: 'lisa-discord-postgres-exporter-${STAGING}'
