--- a/bot/package.json
+++ b/bot/package.json
@@ -6,6 +6,9 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "ts-node src/index.ts"
   },
+  "engines": {
+    "node": ">=16.0.0"
+  },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/SemperPeritus/lisa-discord-bot.git"
@@ -20,6 +23,7 @@
     "discord.js": "^13.0.1",
     "dotenv": "^10.0.0",
     "i18next": "^20.4.0",
+    "lodash": "^4.17.21",
     "pg": "^8.7.1",
     "pg-hstore": "^2.3.4",
     "reflect-metadata": "^0.1.13",
