--- a/bot/package.json
+++ b/bot/package.json
@@ -4,7 +4,9 @@
   "main": "src/index.ts",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "ts-node src/index.ts"
+    "start-bot": "ts-node src/index.ts",
+    "migrate": "sequelize-cli db:migrate --config src/configs/sequelize.ts --migrations-path src/migrations",
+    "start": "run-s migrate start-bot"
   },
   "engines": {
     "node": ">=16.0.0"
@@ -36,7 +38,9 @@
     "@types/node": "^16.6.1",
     "@types/sequelize": "^4.28.10",
     "@types/validator": "^13.6.3",
+    "npm-run-all": "^4.1.5",
     "prettier": "^2.3.2",
-    "pretty-quick": "^3.1.1"
+    "pretty-quick": "^3.1.1",
+    "sequelize-cli": "^6.2.0"
   }
 }
