--- a/bot/package.json
+++ b/bot/package.json
@@ -1,6 +1,7 @@
 {
   "name": "lisa-discord-bot",
   "version": "0.0.1",
+  "license": "MIT",
   "main": "src/index.ts",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
