--- a/.env.example
+++ b/.env.example
@@ -4,17 +4,29 @@ OCR_SPACE_API_KEY="[Your OCR API key]"
 MAIN_CHANNEL_ID=000000000000000000
 RATER_HOST=http://rater
 
+# Postgres
 POSTGRES_HOST=db
 POSTGRES_PORT=9302
 POSTGRES_USER=zero
 POSTGRES_PASSWORD=zeroPass
 POSTGRES_DB=lisa
 PGDATA=/var/lib/postgresql/data/db-files/
+
+# Postgres and MariaDB common path
 DB_MOUNT_PATH=/opt/lisa-discord
 
-# Use prod for production
+# Use "prod" for production
 STAGING=dev
 
 # Optional for Postgress monitoring
 POSTGRES_EXPORTER_HOST=192.168.88.32
 POSTGRES_EXPORTER_PORT=9187
+
+# Ghost
+GHOST_URL=http://lisa.zero-team.pro
+GHOST_HOST=lisa.zero-team.pro
+# Optional for Let’s Encrypt companion
+GHOST_LE_HOST=lisa.zero-team.pro
+
+# Ghost DB
+MYSQL_ROOT_PASSWORD=zeroPass
