--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -37,3 +37,38 @@ services:
     profiles: ['prod']
     depends_on:
       - db
+
+  ghost:
+    container_name: 'lisa-discord-ghost-${STAGING}'
+    build: ./ghost
+    restart: always
+    env_file: .env
+    networks:
+      - default
+      - nginx-proxy
+    environment:
+      - VIRTUAL_HOST=${GHOST_HOST}
+      - LETSENCRYPT_HOST=${GHOST_LE_HOST}
+      - url=${GHOST_URL}
+      - database__client=mysql
+      - database__connection__host=ghost-db
+      - database__connection__user=root
+      - database__connection__password=${MYSQL_ROOT_PASSWORD}
+      - database__connection__database=ghost
+    depends_on:
+      - ghost-db
+
+  ghost-db:
+    container_name: 'lisa-discord-mariadb-${STAGING}'
+    image: mariadb:10.6.4
+    restart: always
+    env_file: .env
+    volumes:
+      - '${DB_MOUNT_PATH}/${STAGING}/ghost-db/:/var/lib/mysql'
+
+networks:
+  default:
+    name: lisa-discord-bot
+  nginx-proxy:
+    name: nginx-proxy
+    external: true
