--- a/ghost/Dockerfile
+++ b/ghost/Dockerfile
@@ -5,4 +5,8 @@ RUN apt install -y curl htop
 
 USER node
 
+RUN cp -rp content custom
+
+COPY theme /var/lib/ghost/custom/themes/casper
+
 CMD ["node", "current/index.js"]
