--- a/.env.example
+++ b/.env.example
@@ -27,6 +27,11 @@ GHOST_URL=http://lisa.zero-team.pro
 GHOST_HOST=lisa.zero-team.pro
 # Optional for Let’s Encrypt companion
 GHOST_LE_HOST=lisa.zero-team.pro
+# Ghost mail
+GHOST_MAIL_FROM="Name <user@example.com>"
+GHOST_MAIL_HOST=example.com
+GHOST_MAIL_USER=user@example.com
+GHOST_MAIL_PASS=password
 
 # Ghost DB
 MYSQL_ROOT_PASSWORD=zeroPass
