--- a/.env.example
+++ b/.env.example
@@ -15,8 +15,10 @@ PGDATA=/var/lib/postgresql/data/db-files/
 # Postgres and MariaDB common path
 DB_MOUNT_PATH=/opt/lisa-discord
 
-# Use "prod" for production
-STAGING=dev
+# Use "dev" for development
+STAGING=prod
+# Additional services
+COMPOSE_PROFILES=monitor,site
 
 # Ghost
 GHOST_URL=http://lisa.zero-team.pro
