--- a/.env.example
+++ b/.env.example
@@ -12,8 +12,8 @@ POSTGRES_PASSWORD=zeroPass
 POSTGRES_DB=lisa
 PGDATA=/var/lib/postgresql/data/db-files/
 
-# Postgres and MariaDB common path
-DB_MOUNT_PATH=/opt/lisa-discord
+# Postgres, MariaDB and Ghost content common path
+DATA_MOUNT_PATH=/opt/lisa-discord
 
 # Use "dev" for development
 STAGING=prod
