Admin react app init with webdriverio boilerplate

--- a/.env.example
+++ b/.env.example
@@ -18,7 +18,7 @@ DATA_MOUNT_PATH=/opt/lisa-discord
 # Use "dev" for development
 STAGING=prod
 # Additional services
-COMPOSE_PROFILES=monitor,site
+COMPOSE_PROFILES=monitor,site,test
 
 # Ghost
 GHOST_URL=http://lisa.zero-team.pro
@@ -33,3 +33,7 @@ GHOST_MAIL_PASS=password
 
 # Ghost DB
 MYSQL_ROOT_PASSWORD=zeroPass
+
+# Admin panel
+ADMIN_HOST=lisa-admin.dev.zero-team.pro
+ADMIN_HOST_LE=lisa-admin.dev.zero-team.pro
