--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -90,6 +90,43 @@ services:
     volumes:
       - '${DATA_MOUNT_PATH}/${STAGING}/ghost-db/:/var/lib/mysql'
 
+  admin:
+    container_name: 'lisa-discord-admin-${STAGING}'
+    build: ./admin
+    image: ams.ocir.io/ax4e0xrv7kjj/lisa/admin:${TAG-latest}
+    restart: always
+    env_file: .env
+    networks:
+      - default
+      - nginx-proxy
+    environment:
+      - VIRTUAL_HOST=${ADMIN_HOST}
+      - VIRTUAL_PORT=3000
+      - LETSENCRYPT_HOST=${ADMIN_LE_HOST}
+    depends_on:
+      - 'bot'
+
+  selenium-hub:
+    container_name: 'lisa-discord-selenium-hub-${STAGING}'
+    image: selenium/hub:4.1.0-20211209
+    profiles: ['test']
+    ports:
+      - '4442:4442'
+      - '4443:4443'
+      - '4444:4444'
+
+  chrome:
+    container_name: 'lisa-discord-selenium-chrome-${STAGING}'
+    image: selenium/node-chrome:4.1.0-20211209
+    shm_size: 2gb
+    profiles: ['test']
+    depends_on:
+      - selenium-hub
+    environment:
+      - SE_EVENT_BUS_HOST=selenium-hub
+      - SE_EVENT_BUS_PUBLISH_PORT=4442
+      - SE_EVENT_BUS_SUBSCRIBE_PORT=4443
+
 networks:
   default:
     name: lisa-discord-bot
