--- a/.env.example
+++ b/.env.example
@@ -35,5 +35,5 @@ GHOST_MAIL_PASS=password
 MYSQL_ROOT_PASSWORD=zeroPass
 
 # Admin panel
-ADMIN_HOST=lisa-admin.dev.zero-team.pro
-ADMIN_HOST_LE=lisa-admin.dev.zero-team.pro
+ADMIN_HOST=lisa-admin.zero-team.pro
+ADMIN_HOST_LE=lisa-admin.zero-team.pro
