--- a/.env.example
+++ b/.env.example
@@ -18,7 +18,8 @@ DATA_MOUNT_PATH=/opt/lisa-discord
 # Use "dev" for development
 STAGING=prod
 # Additional services
-COMPOSE_PROFILES=monitor,site,test
+COMPOSE_PROFILES=monitor,site
+#COMPOSE_PROFILES=monitor,site,admin
 
 # Ghost
 GHOST_URL=http://lisa.zero-team.pro
