--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,6 @@
 DISCORD_TOKEN="[Your Discord bot token]"
+DISCORD_CLIENT_ID="[Your Discord OAuth2 Client ID]"
+DISCORD_CLIENT_SECRET="[Your Discord OAuth2 Client secret]"
 OCR_SPACE_API_KEY="[Your OCR API key]"
 # Channel for system messages any channel that always work
 MAIN_CHANNEL_ID=000000000000000000
@@ -36,5 +38,9 @@ GHOST_MAIL_PASS=password
 MYSQL_ROOT_PASSWORD=zeroPass
 
 # Admin panel
-ADMIN_HOST=lisa-admin.zero-team.pro
-ADMIN_HOST_LE=lisa-admin.zero-team.pro
+ADMIN_HOST=admin.lisa.zero-team.pro
+ADMIN_HOST_LE=admin.lisa.zero-team.pro
+
+# API (bot)
+API_HOST=api.lisa.zero-team.pro
+API_HOST_LE=api.lisa.zero-team.pro
