--- a/bot/package.json
+++ b/bot/package.json
@@ -26,8 +26,10 @@
     "axios": "^0.21.1",
     "discord.js": "^13.0.1",
     "dotenv": "^10.0.0",
+    "express": "^4.17.2",
     "i18next": "^20.4.0",
     "lodash": "^4.17.21",
+    "node-fetch": "^2.6.6",
     "pg": "^8.7.1",
     "pg-hstore": "^2.3.4",
     "reflect-metadata": "^0.1.13",
@@ -37,6 +39,7 @@
     "typescript": "^4.3.5"
   },
   "devDependencies": {
+    "@types/express": "^4.17.13",
     "@types/node": "^16.6.1",
     "@types/sequelize": "^4.28.10",
     "@types/validator": "^13.6.3",
