--- a/admin/package.json
+++ b/admin/package.json
@@ -22,10 +22,14 @@
     "@types/react-dom": "^17.0.9",
     "classnames": "^2.3.1",
     "node-sass": "^7.0.1",
+    "query-string": "^7.0.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-router": "^6.2.1",
+    "react-router-dom": "^6.2.1",
     "react-scripts": "5.0.0",
     "typescript": "^4.5.4",
+    "universal-cookie": "^4.0.4",
     "web-vitals": "^2.1.0"
   },
   "devDependencies": {
