Layout and import modules optimizations

--- a/admin/package.json
+++ b/admin/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "start": "BROWSER=none react-scripts start",
+    "start": "BROWSER=none react-app-rewired start",
     "build": "react-scripts build",
     "test": "wdio run wdio.conf.ts",
     "react-test": "react-scripts test",
@@ -43,9 +43,11 @@
     "@wdio/spec-reporter": "^7.16.11",
     "chromedriver": "^96.0.0",
     "prettier": "^2.5.1",
+    "react-app-rewired": "^2.1.11",
     "selenium-webdriver": "^4.1.0",
     "shelljs": "^0.8.4",
     "ts-node": "^10.4.0",
+    "tsconfig-paths-webpack-plugin": "^3.5.2",
     "wdio-chromedriver-service": "^7.2.2",
     "wdio-docker-service": "^3.1.4",
     "wdio-teamcity-reporter": "^3.0.2",
