--- a/admin/package.json
+++ b/admin/package.json
@@ -22,6 +22,7 @@
     "@types/react": "^17.0.20",
     "@types/react-dom": "^17.0.9",
     "classnames": "^2.3.1",
+    "lodash": "^4.17.21",
     "node-sass": "^7.0.1",
     "query-string": "^7.0.1",
     "react": "^17.0.2",
