--- a/bot/package.json
+++ b/bot/package.json
@@ -24,6 +24,7 @@
   "dependencies": {
     "@discordjs/rest": "^0.1.0-canary.0",
     "axios": "^0.21.1",
+    "cors": "^2.8.5",
     "discord.js": "^13.0.1",
     "dotenv": "^10.0.0",
     "express": "^4.17.2",
