Yarn network timeout 5 minutes

--- a/bot/Dockerfile
+++ b/bot/Dockerfile
@@ -19,7 +19,7 @@ USER node
 
 COPY package.json package.json
 COPY yarn.lock yarn.lock
-RUN yarn install --pure-lockfile
+RUN yarn install --pure-lockfile --network-timeout 300000
 
 
 COPY . /app
