--- a/.env.example
+++ b/.env.example
@@ -27,7 +27,7 @@ COMPOSE_PROFILES=monitor,site
 GHOST_URL=http://lisa.zero-team.pro
 GHOST_HOST=lisa.zero-team.pro
 # Optional for Let’s Encrypt companion
-GHOST_LE_HOST=lisa.zero-team.pro
+GHOST_HOST_LE=lisa.zero-team.pro
 # Ghost mail
 GHOST_MAIL_FROM="Name <user@example.com>"
 GHOST_MAIL_HOST=example.com
