--- a/.env.example
+++ b/.env.example
@@ -20,8 +20,7 @@ DATA_MOUNT_PATH=/opt/lisa-discord
 # Use "dev" for development
 STAGING=prod
 # Additional services
-COMPOSE_PROFILES=monitor,site
-#COMPOSE_PROFILES=monitor,site,admin
+COMPOSE_PROFILES=monitor,site,admin
 
 # Ghost
 GHOST_URL=http://lisa.zero-team.pro
