--- a/admin/Dockerfile
+++ b/admin/Dockerfile
@@ -23,6 +23,10 @@ RUN yarn install --pure-lockfile --network-timeout 300000
 
 COPY . /app
 
+ARG REACT_APP_API_HOST
+ARG REACT_APP_API_HOST_LE
+ENV REACT_APP_API_HOST=${REACT_APP_API_HOST}
+ENV REACT_APP_API_HOST_LE=${REACT_APP_API_HOST_LE}
 RUN echo "REACT_APP_API_HOST=$REACT_APP_API_HOST" > .env
 RUN echo "REACT_APP_API_HOST_LE=$REACT_APP_API_HOST_LE" >> .env
 
