--- a/.env.example
+++ b/.env.example
@@ -12,7 +12,12 @@ POSTGRES_PORT=9302
 POSTGRES_USER=zero
 POSTGRES_PASSWORD=zeroPass
 POSTGRES_DB=lisa
-PGDATA=/var/lib/postgresql/data/db-files/
+
+# Redis
+REDIS_HOST=redis
+REDIS_PORT=6379
+REDIS_USER=
+REDIS_PASSWORD=zeroPass
 
 # Postgres, MariaDB and Ghost content common path
 DATA_MOUNT_PATH=/opt/lisa-discord
