--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -14,6 +14,8 @@ services:
       - './.env:/app/.env:ro'
       - '${DATA_MOUNT_PATH}/${STAGING}/redis-certs/:/certs:ro'
     environment:
+      - SHARD_ID=0
+      - API_ON=true
       - DB_FORCE=${DB_FORCE}
       - VIRTUAL_HOST=${API_HOST}
       - VIRTUAL_PORT=80
@@ -21,6 +23,40 @@ services:
     depends_on:
       - 'db'
       - 'redis'
+
+  bot-shard-1:
+    container_name: 'lisa-discord-bot-shard-1-${STAGING}'
+    build: ./bot
+    image: ams.ocir.io/ax4e0xrv7kjj/lisa/bot:${TAG-latest}
+    restart: always
+    env_file: .env
+    networks:
+      - default
+      - nginx-proxy
+    volumes:
+      - './.env:/app/.env:ro'
+      - '${DATA_MOUNT_PATH}/${STAGING}/redis-certs/:/certs:ro'
+    environment:
+      - SHARD_ID=1
+    depends_on:
+      - 'bot'
+
+  bot-shard-2:
+    container_name: 'lisa-discord-bot-shard-2-${STAGING}'
+    build: ./bot
+    image: ams.ocir.io/ax4e0xrv7kjj/lisa/bot:${TAG-latest}
+    restart: always
+    env_file: .env
+    networks:
+      - default
+      - nginx-proxy
+    volumes:
+      - './.env:/app/.env:ro'
+      - '${DATA_MOUNT_PATH}/${STAGING}/redis-certs/:/certs:ro'
+    environment:
+      - SHARD_ID=2
+    depends_on:
+      - 'bot'
 
   rater:
     container_name: 'lisa-discord-rater-${STAGING}'
