--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,8 +5,11 @@ services:
     container_name: 'lisa-discord-bot-${STAGING}'
     build: ./bot
     image: ams.ocir.io/ax4e0xrv7kjj/lisa/bot:${TAG-latest}
-    restart: always
+    restart: unless-stopped
     env_file: .env
+    command: 'yarn run start-bridge'
+    ports:
+      - '14444:14444'
     networks:
       - default
       - nginx-proxy
@@ -28,11 +31,11 @@ services:
     container_name: 'lisa-discord-bot-shard-1-${STAGING}'
     build: ./bot
     image: ams.ocir.io/ax4e0xrv7kjj/lisa/bot:${TAG-latest}
-    restart: always
+    restart: unless-stopped
     env_file: .env
+    command: 'yarn run start-cluster'
     networks:
       - default
-      - nginx-proxy
     volumes:
       - './.env:/app/.env:ro'
       - '${DATA_MOUNT_PATH}/${STAGING}/redis-certs/:/certs:ro'
@@ -45,11 +48,11 @@ services:
     container_name: 'lisa-discord-bot-shard-2-${STAGING}'
     build: ./bot
     image: ams.ocir.io/ax4e0xrv7kjj/lisa/bot:${TAG-latest}
-    restart: always
+    restart: unless-stopped
     env_file: .env
+    command: 'yarn run start-cluster'
     networks:
       - default
-      - nginx-proxy
     volumes:
       - './.env:/app/.env:ro'
       - '${DATA_MOUNT_PATH}/${STAGING}/redis-certs/:/certs:ro'
