RabbitMQ for gateway and bot clusters

--- a/.env.example
+++ b/.env.example
@@ -19,6 +19,9 @@ REDIS_PORT=6379
 REDIS_USER=
 REDIS_PASSWORD=zeroPass
 
+# RabbitMQ
+RABBITMQ_URI=amqp://user:password@localhost:5672
+
 # Postgres, MariaDB and Ghost content common path
 DATA_MOUNT_PATH=/opt/lisa-discord
 
