--- a/bot/package.json
+++ b/bot/package.json
@@ -30,6 +30,7 @@
   "homepage": "https://github.com/SemperPeritus/lisa-discord-bot#readme",
   "dependencies": {
     "@discordjs/rest": "^0.1.0-canary.0",
+    "amqplib": "^0.8.0",
     "axios": "^0.21.1",
     "body-parser": "^1.19.1",
     "cors": "^2.8.5",
@@ -51,6 +52,7 @@
     "typescript": "^4.3.5"
   },
   "devDependencies": {
+    "@types/amqplib": "^0.8.2",
     "@types/express": "^4.17.13",
     "@types/node": "^16.6.1",
     "@types/sequelize": "^4.28.10",
